Fix horizontal scroll

--- a/src/Styles/_misc.scss
+++ b/src/Styles/_misc.scss
@@ -34,3 +34,5 @@
 }
 
 .lazyload-wrapper { width:100%; }
+
+* { box-sizing: border-box; max-width: 100% !important; }
