--- a/src/Styles/_tags.scss
+++ b/src/Styles/_tags.scss
@@ -1,5 +1,3 @@
-* { box-sizing: border-box; }
-
 html, body, #root, .app {
   width: 100vw;
   min-height: 100vh;
