--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -63,109 +63,6 @@
   /* Standard syntax (must be last) */
   border-image-slice: 1; }
 
-* {
-  box-sizing: border-box; }
-
-html, body, #root, .app {
-  width: 100vw;
-  min-height: 100vh;
-  background-color: #242F3B; }
-
-html {
-  font-size: 16px;
-  text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none; }
-  @media (max-width: 1000px) {
-    html {
-      font-size: calc(12px + 0.4vw); } }
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-serif; }
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  font-family: "Titillium Web", sans-serif; }
-
-h1 {
-  font-size: calc(2.5rem - (0.25 * 1rem)); }
-
-h2 {
-  font-size: calc(2.5rem - (0.25 * 2rem)); }
-
-h3 {
-  font-size: calc(2.5rem - (0.25 * 3rem)); }
-
-h4 {
-  font-size: calc(2.5rem - (0.25 * 4rem)); }
-
-h5 {
-  font-size: calc(2.5rem - (0.25 * 5rem)); }
-
-h6 {
-  font-size: calc(2.5rem - (0.25 * 6rem)); }
-
-p {
-  margin: 0;
-  padding: 0;
-  font-size: 1rem; }
-
-p, a, input, button, li, textarea {
-  font-size: 1rem;
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.5rem; }
-
-button {
-  width: 100%;
-  padding: 5px;
-  cursor: pointer; }
-
-a {
-  text-decoration: none; }
-
-section {
-  position: relative;
-  width: 100vw;
-  min-height: 100vh; }
-
-.tooltipped {
-  position: relative;
-  display: inline-block; }
-
-.tooltipped .tooltip {
-  visibility: hidden;
-  width: 100px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  top: 110%;
-  left: 50%;
-  margin-left: -50px; }
-
-.tooltipped .tooltip::after {
-  content: '';
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent transparent black transparent; }
-
-.tooltipped:hover .tooltip {
-  visibility: visible; }
-
-.lazyload-wrapper {
-  width: 100%; }
-
 .header {
   animation: fadeIn;
   animation-duration: 1s; }
@@ -650,3 +547,107 @@ section {
         .contact .content .external footer .footnote {
           color: #A2B5C3;
           font-size: 0.8rem; }
+
+html, body, #root, .app {
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #242F3B; }
+
+html {
+  font-size: 16px;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none; }
+  @media (max-width: 1000px) {
+    html {
+      font-size: calc(12px + 0.4vw); } }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  font-family: "Titillium Web", sans-serif; }
+
+h1 {
+  font-size: calc(2.5rem - (0.25 * 1rem)); }
+
+h2 {
+  font-size: calc(2.5rem - (0.25 * 2rem)); }
+
+h3 {
+  font-size: calc(2.5rem - (0.25 * 3rem)); }
+
+h4 {
+  font-size: calc(2.5rem - (0.25 * 4rem)); }
+
+h5 {
+  font-size: calc(2.5rem - (0.25 * 5rem)); }
+
+h6 {
+  font-size: calc(2.5rem - (0.25 * 6rem)); }
+
+p {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem; }
+
+p, a, input, button, li, textarea {
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.5rem; }
+
+button {
+  width: 100%;
+  padding: 5px;
+  cursor: pointer; }
+
+a {
+  text-decoration: none; }
+
+section {
+  position: relative;
+  width: 100vw;
+  min-height: 100vh; }
+
+.tooltipped {
+  position: relative;
+  display: inline-block; }
+
+.tooltipped .tooltip {
+  visibility: hidden;
+  width: 100px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 110%;
+  left: 50%;
+  margin-left: -50px; }
+
+.tooltipped .tooltip::after {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent; }
+
+.tooltipped:hover .tooltip {
+  visibility: visible; }
+
+.lazyload-wrapper {
+  width: 100%; }
+
+* {
+  box-sizing: border-box;
+  max-width: 100% !important; }
